--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,12 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    locale: 'fr'
+    timezone: 'Europe/Paris'
+    app_env: '%env(resolve:APP_ENV)%'
+    app_root: '%kernel.project_dir%'
+    database: '%env(resolve:DATABASE_URL)%'
+    tmp_directory: '%kernel.project_dir%/tmp'
 
 services:
     # default configuration for services in *this* file
